--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -1,3 +1,16 @@
-html {
-  font-family: 'Comic Sans MS', sans-serif;
+body {
+  font-family: 'Moon Bold', sans-serif;
+  color: #666;
+  margin-top: 40px;
+}
+
+
+.app {
+  width: 500px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.container {
+  position: relative;
 }
