Added color logic changes for color mix and time duration

--- a/src/sass/_game.scss
+++ b/src/sass/_game.scss
@@ -40,10 +40,30 @@
 }
 
 .box-option:hover {
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  -webkit-animation-name: hvr-buzz;
+  animation-name: hvr-buzz;
+  -webkit-animation-duration: 0.15s;
+  animation-duration: 0.15s;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
 }
 
 .time {
   margin-bottom: 1em;
   font-size: 48px;
+}
+
+.time-danger {
+  color: #C0392B;
+  -moz-transition:all 0.5s ease-in-out;
+  -webkit-transition:all 0.5s ease-in-out;
+  -o-transition:all 0.5s ease-in-out;
+  -ms-transition:all 0.5s ease-in-out;
+  transition:all 0.5s ease-in-out; 
+  -moz-animation:blink normal 0.8s infinite ease-in-out; /* Firefox */
+  -webkit-animation:blink normal 0.8s infinite ease-in-out; /* Webkit */
+  -ms-animation:blink normal 0.8s infinite ease-in-out; /* IE */
+  animation:blink normal 0.8s infinite ease-in-out; /* Opera */
 }
