--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -1,16 +1,34 @@
+html {
+  padding: 0;
+}
+
 body {
   font-family: 'Moon Bold', sans-serif;
   color: #666;
-  margin-top: 40px;
+  margin: 0;
+  margin-top: 20px;
+  font-size: 12px;
 }
 
 
 .app {
-  width: 500px;
+  width: 280px;
   margin: 0 auto;
   position: relative;
 }
 
 .container {
   position: relative;
+}
+
+
+@media (min-width: 520px) {
+  body {
+    font-size: 18px;
+    margin-top: 60px;
+  }
+
+  .app {
+    width: 500px;
+  }
 }
