--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -8,6 +8,13 @@ body {
   margin: 0;
   margin-top: 20px;
   font-size: 12px;
+  -webkit-user-select: none;  /* Chrome all / Safari all */
+  -moz-user-select: none;     /* Firefox all */
+  -ms-user-select: none;      /* IE 10+ */
+  user-select: none;          /* Likely future */
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -moz-tap-highlight-color: rgba(0,0,0,0);
+  tap-highlight-color: rgba(0,0,0,0);
 }
 
 
