--- a/src/sass/_ended.scss
+++ b/src/sass/_ended.scss
@@ -1,3 +1,5 @@
+@import "_vars.scss";
+
 .ended {
   z-index: 1;
   position: absolute;
@@ -16,11 +18,10 @@
 
   a {
     font-size: 18px;
-    background: rgba(40, 62, 80, 0.7);
     color: white;
-    border-radius: 0.3em;
-    padding: 0.5em;
     cursor: pointer;
     font-family: 'Moon Bold';
+
+    @include button-style;
   }
 }
