--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,3 +1,4 @@
+@import "_vars.scss";
 
 .title {
   font-size: 36px;
@@ -44,14 +45,13 @@
 
   a {
     font-size: 14px;
-    background: rgba(40, 62, 80, 0.7);
     color: white;
-    border-radius: 0.3em;
-    padding: 0.5em;
     cursor: pointer;
     float: right;
     font-family: 'Moon Bold';
     width: 80px;
+
+    @include button-style;
   }
 }
 
