--- a/src/sass/_game.scss
+++ b/src/sass/_game.scss
@@ -22,6 +22,29 @@
     display: block;
     line-height: 72px;
   }
+
+  .ms-left {
+    width: 88px;
+    display: inline-block;
+  }
+
+  .score-change {
+    position: absolute;
+    display: inline-block;
+    margin-left: 10px;
+
+    font-size: 16px;
+    line-height: 32px;
+
+    -webkit-animation-name: fadeOut;
+    animation-name: fadeOut;
+    -webkit-animation-duration: 100s;
+    animation-duration: 100s;
+
+    .secs {
+      font-size: 11px;
+    }
+  }
 }
 
 .box {
@@ -52,7 +75,7 @@
 
 .time {
   margin-bottom: 0.5em;
-  font-size: 48px;
+  font-size: 32px;
 }
 
 .time-danger {
@@ -87,6 +110,20 @@
     .plus {
       line-height: 120px;
     }
+
+    .score-change {
+      font-size: 24px;
+      line-height: 54px;
+      margin-left: 24px;
+
+      .secs {
+        font-size: 16px;
+      }
+    }
+
+    .ms-left {
+      width: 120px;
+    }
   }
 
   .box-option {
@@ -99,5 +136,10 @@
     div {
       line-height: 32px;
     }
+  }
+
+
+  .time {
+    font-size: 48px;
   }
 }
