--- a/src/sass/_game.scss
+++ b/src/sass/_game.scss
@@ -17,24 +17,14 @@
     line-height: 72px;
   }
 
-
-  .equals {
-    display: block;
-    line-height: 72px;
-  }
-
   .ms-left {
     width: 64px;
     display: inline-block;
   }
 
   .score-change {
-    position: absolute;
-    display: inline-block;
-    margin-left: 10px;
-
-    font-size: 18px;
-    line-height: 32px;
+    font-size: 28px;
+    padding: 18px;
 
     .secs {
       font-size: 11px;
@@ -107,7 +97,7 @@
     }
 
     .score-change {
-      font-size: 24px;
+      font-size: 40px;
       line-height: 54px;
       margin-left: 24px;
 
